--- a/index.html
+++ b/index.html
@@ -2,18 +2,77 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zap Zap Web</title>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        html,
+        body,
+        #app {
+            height: 100%;
+        }
+
+        #app {
+            display: flex;
+        }
+
+        .contacts {
+            flex: 1;
+            background: #111;
+            max-height: 100%;
+            overflow-y: auto;
+        }
+
+        .fill {
+            height: 300vh;
+        }
+
+        .chat {
+            display: flex;
+            flex-direction: column;
+
+            flex: 3;
+            background: #333;
+        }
+
+        .chat-header {
+            background: #777;
+            height: 40px;
+        }
+
+        .chat-messages {
+            flex: 1;
+        }
+
+        .message-box {
+            background: #555;
+        }
+    </style>
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div id="app">
+        <nav class="contacts">
+            <div class="fill"></div>
+        </nav>
+
+        <article class="chat">
+            <header class="chat-header"></header>
+
+            <div class="chat-messages"></div>
+
+            <article class="message-box">
+                <input type="text" class="message-box-input" />
+            </article>
+        </article>
+    </div>
 </body>
 
 </html>
